@@ -47,6 +47,9 @@
     url="http://www.fsf.org/philosophy/free-sw.html">free
     software</ulink>.</para>
 
+    <para>Please continue directly to the <link linkend="rnwhatsnew">What's New</link> section, 
+    or use the links at the right to learn more about this release and the GNOME Desktop in general.</para>
+
     </abstract>
 
   </articleinfo>
